--- a/hm-2/index.html
+++ b/hm-2/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>hm-1</title>
+    <title>Hm-2</title>
 </head>
 <body>
+1
+<script src="main.js">
 
-<script src="main.js"></script>
+</script>
 </body>
 </html>
